@@ -1,3 +1,9 @@
+Sat Mar 12 16:25:23 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* decode.c (oDecodeTable): Add SMC/SMI.
+	* m_cpuctrl.c, m_cpuctrl.h (m_smc): Add.
+	* regression/tests_pass/smc.s: Add.
+
 Thu Mar 10 00:45:15 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* decode.c (oDecodeTable): Add DBG.
